# GlintsPathTracer

./: CMakeLists.txt  README
Models/: cat.off  cat_simple.off  cat_simple2.off
src/: Intersection.cpp  Intersection.hpp  RayVec.cpp  RayVec.hpp  SrgbTransform.cpp  SrgbTransform.hpp  Texture.cpp  Texture.hpp  brdf.cpp  brdf.hpp  main.cpp  mesh.cpp  mesh.hpp  pathtracer.cpp  pos_nor_bvh.cpp  pos_nor_bvh.hpp  position_normal_bvh.cpp  position_normal_bvh.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
